# BlurLyric

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js  音乐资源来源方式文档报告.md
src/: App.vue  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: cache_manager.rs  gpu_image_processor.rs  image_processor.rs  incremental_scanner.rs  lib.rs  music_deduplicator.rs  music_library_cache.rs  performance_monitor.rs  resource_cache.rs  trace.rs
src-tauri/src/api/: http_proxy.rs  mod.rs
src-tauri/src/cache/: mod.rs  music_library_cache.rs  resource_cache.rs
src-tauri/src/commands/: cache_commands.rs  directory_commands.rs  image_commands.rs  mod.rs  music_commands.rs  window_commands.rs
src-tauri/src/common/: constants.rs  mod.rs  utils.rs
src-tauri/src/core/: incremental_scanner.rs  mod.rs  music_deduplicator.rs  trace.rs
src-tauri/src/core_v2/: events.rs  merge_strategy.rs  mod.rs  models.rs  quality.rs
src-tauri/src/favor_system/: favor_system.rs  mod.rs
src-tauri/src/image/: image_processor.rs  mod.rs
src-tauri/src/library_manager/: mod.rs  music_storage_source_library_manager.rs
src-tauri/src/models/: album.rs  artist.rs  legacy.rs  mod.rs  track.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/monitor/: mod.rs  performance_monitor.rs
src-tauri/src/monitoring/: mod.rs
src-tauri/src/music_tag/: audio_properties.rs  error.rs  mod.rs  parser.rs  types.rs
src-tauri/src/network/: http_proxy.rs  mod.rs
src-tauri/src/persistence/: library_cache.rs  mod.rs
src-tauri/src/processor/: gpu_image_processor.rs  image_processor.rs  mod.rs
src-tauri/src/scanner/: incremental_scanner.rs  mod.rs
src-tauri/src/services/: deduplication.rs  mod.rs  persistence.rs  scanner.rs
src-tauri/src/shaders/: resize.wgsl
src-tauri/src/source_manager/: mod.rs  source_manager.rs
src-tauri/src/sources/: api_source.rs  mod.rs  source.rs  storage_source.rs
src-tauri/tests/: core_v2_models_test.rs  library_manager_test.rs  source_manager_test.rs
(+253 files in other folders)
