[package]
name = "blurlyric"
version = "3.0.0"
description = "A Music App"
authors = ["gozaoo"]
edition = "2021"

[lib]
name = "blurlyric_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0.1"
lazy_static = "1.5.0"
tokio = { version = "1.41.1", features = ["full"] }
image = { version = "0.25.5", features = ["png", "jpeg", "webp"] }
once_cell = "1.19.0"
num_cpus = "1.16.0"
futures = "0.3.30"
blake3 = "1.5"
wgpu = "22.0"
bytemuck = { version = "1.16", features = ["derive"] }
pollster = "0.3"
symphonia = { version = "0.5", features = ["all"] }
ulid = "1.2"
async-trait = "0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0.0"
